--- a/src/lib/Control.scss
+++ b/src/lib/Control.scss
@@ -3,6 +3,7 @@
   top: 0;
   right: 10px;
   z-index: 2;
+  font-size: 20px;
   opacity: 1;
   overflow: hidden;
   &:hover {
@@ -48,6 +49,7 @@
       }
     }
     button {
+      font-size: 20px;
       outline: none;
       border: none;
       cursor: pointer;
